Docs: added new author

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,4 +3,4 @@
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
 Samuel Ayano <samuelayano7@gmail.com>
-
+Onah Nelson OCHELLE <onahnelson2@gmail.com>
